assets/css/components/_projects.scss
.projects {

    &__carousel {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
        margin-right: -1rem;

        &__link {
            position: relative;
            flex: 1 1 20rem;
            margin: 0 1rem 1rem 0;
            box-shadow: 0 8px 14px rgba($color: black, $alpha: 0.2);
            background-color: white;
            border-radius: 5px;
            overflow: hidden;

            transition: all 0.6s ease;
            &:hover {
                cursor: pointer;
                transition: all 0.6s ease;
                transform: translate3D(0, -1px, 0) scale(1.02);
            }

            &__image {
                width: 100%;
                height: 10em;
                object-fit: cover;
            }

            &__content {
                display: flex;
                flex-direction: column;
                margin: 0 margin(1) margin(0.5) margin(1);

                &__title {
                    margin-top: 0;
                    color: $black;
                }

                &__description {
                }

                &__more {
                    text-align: right;
                }
            }
        }
    }
}

